# hydra_hpc_example

./: .gitignore  README.md  env.yaml  modules.sh  my_app.py  runner.pbs  test.txt
configs/: main.yaml
configs/experiment/: slurm_big.yaml
configs/local/: default.yaml  joblib.yaml  slurm_n5.yaml
scripts/: plots.py  sleep_plots.py
src/dask_batchrunner/: README.md  dask_launcher.py  het_job.slurm  job.slurm  main.py  modules.txt  pixi.toml  pixi_dask.slurm  requirements.txt  submitit_launcher.py
src/dask_jobqueue/: README.md  env.yaml  main.py  modules.sh  requirements.txt
src/dask_jobqueue/configs/: main.yaml
src/dask_jobqueue/configs/cluster/: local.yaml  slurm.yaml  slurm_conda.yaml
src/dask_jobqueue/configs/launcher/: submitit_slurm.yaml
src/dask_jobqueue/configs/task/: sleep.yaml
src/dask_mympi/: .gitignore  README.md  dask_mpi_launcher.py  launcher.pbs  modules.txt
src/frequencies_hydra/: README.md  env.yaml  modules.sh  pyproject.toml
src/frequencies_hydra/src/frequencies_hydra/: config.py  data.py  launch.py  main.py  methods.py
src/sleep_hydra/: README.md  main.py  modules.sh  requirements.txt
src/sleep_hydra/configs/: main.yaml
src/sleep_pbs/: README.md  main.py  modules.sh  requirements.txt  sweep.csv  sweep.pbs  sweep.py
